--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Bootstrap Portfolio</title>
 </head>
 <body>
-    <nav class="bg-light container-fluid nav-row">
+    <nav class="bg-f container-fluid nav-row">
         <div class="container nav-container">
             <div class="row justify-content-between align-items-end">
                 <div class="col-sm-5">
@@ -25,7 +25,7 @@
             </div>
         </div>
     </nav>
-    <main class="container bg-light">
+    <main class="container bg-f">
         <div class="row">
             <div class="col-sm-12">
                 <h2 class="content-head">About Me</h2>
