--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <title>Bootstrap Portfolio</title>
 </head>
 <body>
-    <nav class="bg-light container-fluid nav-row">
+    <nav class="bg-f container-fluid nav-row">
         <div class="container nav-container">
             <div class="row justify-content-between align-items-end">
                 <div class="col-sm-5">
@@ -25,30 +25,46 @@
             </div>
         </div>
     </nav>
-    <main class="container bg-light">
+    <main class="container bg-f">
         <div class="row">
             <div class="col-sm-12">
-                <h2 class="content-head">About Me</h2>
+                <h2 class="content-head">Portfolio</h2>
                     <div class="row">
-                        <div class="col-sm-3">
-                            <img src="assets/images/headshot.jpg" width=100%>
+                        <div class="col-sm-4">
+                            <a href="#" alt="placeholder">
+                                <img class="link-img" src="assets/images/business.jpg" width=100%>
+                                <div class="overlay-text">
+                                    Project Tracker
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-sm-4">
+                            <a href="#" alt="placeholder">
+                                <img class="link-img" src="assets/images/food.jpg" width=100%>
+                                <div class="overlay-text">
+                                    Calorie Counter
+                                </div>
+                            </a>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-12">
-                            <p>
-                                I work for a data generation company in RTP specializing in Metabolomics. Specifically I manage the chemistry personnel providing samples to be analyzed. This position supplies a never-ending list of new and exciting challenges every day. I have become quite knowledgable about extraction chemistry, personality management, long-term task completion tracking, and also quite skilled in problem solving.
-                            </p>
-                            <p>
-                                I met my wife on the dating website E-Harmony 5 years ago. It did not take long for us to be married and ready to find a place to settle down. Mebane has wonderful amenities and a small town feel, not to mention the cheapest property taxes in the area, and so we found a small house to buy. We make such a great team that we decided to grow our team, and we took on a beautiful healthy baby boy in December of 2016. His joy and energy make a wonderful end to every day.
-                            </p>
-                            <p>
-                                Now I have decided to take on the mammoth task of learning web development computer engineering. Hopefully the UNC Coding Bootcamp will help that process along!
-                            </p>
+                        <div class="col-sm-4">
+                            <a href="#" alt="placeholder">
+                                <img class="link-img" src="assets/images/plane.jpg" width=100%>
+                                <div class="overlay-text">
+                                    Flying Game
+                                </div>
+                            </a>
                         </div>
-
+                        <div class="col-sm-4">
+                            <a href="#" alt="placeholder">
+                                <img class="link-img" src="assets/images/rhino.jpg" width=100%>
+                                <div class="overlay-text">
+                                    Feeding Tracker
+                                </div>
+                            </a>
+                        </div>
                     </div>
-
                 </div>
         </div>
 
