tidied up responsive functions for margins

--- a/contact.html
+++ b/contact.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <nav class="bg-f container-fluid nav-row">
-        <div class="container nav-container">
+        <div class="nav-container">
             <div class="row justify-content-between align-items-end">
-                <div class="col-sm-5">
+                <div class="col-xs-5">
                     <h1 class="nav-name text-center">Philip M. Charpia</h1>
                 </div>
 
-                <div class="col-sm-5">
+                <div class="col-xs-5">
                     <ul>
                         <li class="btn d.inline"><a class="txt-decoration-none text-muted a-nav" href="index.html">About</a></li>
                         <li class="btn d.inline btn-mid"><a class="txt-decoration-none text-muted a-nav" href="portfolio.html" id="mid-line">Portfolio</a></li>
@@ -25,7 +25,7 @@
             </div>
         </div>
     </nav>
-    <main class="container bg-f">
+    <main class="bg-f">
         <h2 class="content-head">Contact</h2>
         <form>
             <div class="form-group">
