--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="bg-f container-fluid nav-row">
-        <div class="container nav-container">
+        <div class="nav-container">
             <div class="row justify-content-between align-items-end">
                 <div class="col-sm-5">
                     <h1 class="nav-name text-center">Philip M. Charpia</h1>
@@ -25,19 +25,19 @@
             </div>
         </div>
     </nav>
-    <main class="container bg-f">
+    <main class="bg-f">
         <div class="row">
             <div class="col-sm-12">
                 <h2 class="content-head">About Me</h2>
-                    <div class="row">
+                    <div class="row no-flex">
                         <div class="col-sm-3">
-                            <img src="assets/images/headshot.jpg" width=100%>
+                            <img class="headshot" src="assets/images/headshot.jpg" width=100%>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row no-flex">
                         <div class="col-sm-12">
                             <p>
-                                I work for a data generation company in RTP specializing in Metabolomics. Specifically I manage the chemistry personnel providing samples to be analyzed. This position supplies a never-ending list of new and exciting challenges every day. I have become quite knowledgable about extraction chemistry, personality management, long-term task completion tracking, and also quite skilled in problem solving.
+                                I work for a data generation company in RTP specializing in Metabolomics. Specifically I manage the chemistry personnel providing samples to be analyzed. This position supplies a never-ending list of new challenges every day. I have become quite knowledgable about extraction chemistry, personality management, long-term task completion tracking, and also quite skilled in problem solving.
                             </p>
                             <p>
                                 I met my wife on the dating website E-Harmony 5 years ago. It did not take long for us to be married and ready to find a place to settle down. Mebane has wonderful amenities and a small town feel, not to mention the cheapest property taxes in the area, and so we found a small house to buy. We make such a great team that we decided to grow our team, and we took on a beautiful healthy baby boy in December of 2016. His joy and energy make a wonderful end to every day.
