--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="bg-f container-fluid nav-row">
-        <div class="container nav-container">
+        <div class="nav-container">
             <div class="row justify-content-between align-items-end">
                 <div class="col-sm-5">
                     <h1 class="nav-name text-center">Philip M. Charpia</h1>
@@ -25,7 +25,7 @@
             </div>
         </div>
     </nav>
-    <main class="container bg-f">
+    <main class="bg-f">
         <div class="row">
             <div class="col-sm-12">
                 <h2 class="content-head">Portfolio</h2>
