more styling, min size link images, centered nav links <640px

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
                 </div>
 
                 <div class="col-sm-5">
-                    <ul>
-                        <li class="btn d.inline"><a class="txt-decoration-none text-muted a-nav" href="index.html">About</a></li>
-                        <li class="btn d.inline btn-mid"><a class="txt-decoration-none text-muted a-nav" href="portfolio.html" id="mid-line">Portfolio</a></li>
-                        <li class="btn d.inline"><a class="txt-decoration-none text-muted a-nav" href="contact.html">Contact</a></li>
-                    </ul>
+                    <div class="nav-links">
+                        <ul>
+                            <li class="btn d.inline"><a class="txt-decoration-none text-muted a-nav" href="index.html">About</a></li>
+                            <li class="btn d.inline btn-mid"><a class="txt-decoration-none text-muted a-nav" href="portfolio.html" id="mid-line">Portfolio</a></li>
+                            <li class="btn d.inline"><a class="txt-decoration-none text-muted a-nav" href="contact.html">Contact</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -31,7 +33,7 @@
                 <h2 class="content-head">About Me</h2>
                     <div class="row no-flex">
                         <div class="col-sm-3">
-                            <img class="headshot" src="assets/images/headshot.jpg" width=100%>
+                            <img class="headshot" src="assets/images/headshot.jpg">
                         </div>
                     </div>
                     <div class="row no-flex">
