--- a/contact.html
+++ b/contact.html
@@ -11,11 +11,11 @@
     <nav class="bg-f container-fluid nav-row">
         <div class="nav-container">
             <div class="row justify-content-between align-items-end">
-                <div class="col-xs-5">
+                <div class="col-sm-5">
                     <h1 class="nav-name text-center">Philip M. Charpia</h1>
                 </div>
 
-                <div class="col-xs-5">
+                <div class="col-sm-5">
                     <ul>
                         <li class="btn d.inline"><a class="txt-decoration-none text-muted a-nav" href="index.html">About</a></li>
                         <li class="btn d.inline btn-mid"><a class="txt-decoration-none text-muted a-nav" href="portfolio.html" id="mid-line">Portfolio</a></li>
