--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
             <div class="col-sm-12">
                 <h2 class="content-head">Portfolio</h2>
                     <div class="row">
-                        <div class="col-sm-4">
+                        <div class="col-sm-4 link-img1">
                             <a href="#" alt="placeholder">
                                 <img class="link-img" src="assets/images/business.jpg" width=100%>
                                 <div class="overlay-text">
@@ -38,7 +38,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-sm-4 link-img1">
                             <a href="#" alt="placeholder">
                                 <img class="link-img" src="assets/images/food.jpg" width=100%>
                                 <div class="overlay-text">
@@ -48,7 +48,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-4">
+                        <div class="col-sm-4 link-img1">
                             <a href="#" alt="placeholder">
                                 <img class="link-img" src="assets/images/plane.jpg" width=100%>
                                 <div class="overlay-text">
@@ -56,7 +56,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-sm-4 link-img1">
                             <a href="#" alt="placeholder">
                                 <img class="link-img" src="assets/images/rhino.jpg" width=100%>
                                 <div class="overlay-text">
